fixing how add to cart button looks on mobile devices

--- a/src/components/styling/Product.css
+++ b/src/components/styling/Product.css
@@ -45,3 +45,12 @@
     height: 100px;
     margin-bottom: 15px;
 }
+
+@media (max-width: 768px) {
+    .product > button{
+        width: 155px;
+        height: 40px;
+        background: #f0c14b;
+    }
+
+}
